filter for year

--- a/PM_ETL.ipynb
+++ b/PM_ETL.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOae+zETLdsGgOhzU1GJbP3",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/cbeckler/final_project/blob/cb_etl/PM_ETL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 9,
@@ -819,9 +807,47 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "pm_df = pm_df.loc[pm_df['year']<=2014]"
+      ],
       "metadata": {
         "id": "HTBmCDL9DQ6c"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pm_df.year.unique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ubuKFb_rDnpU",
+        "outputId": "296aa97c-066a-4abe-86d1-09f89f1a7b78"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,\n",
+              "       2012, 2013, 2014])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JI_NC6VKDzZR"
       },
       "execution_count": null,
       "outputs": []
