Adding Mock Model CSV

--- a/Machine Learning Model/Supervised Regression Model Exploration.ipynb
+++ b/Machine Learning Model/Supervised Regression Model Exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a6cdd8a",
+   "id": "2539f037",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,11 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be63af71",
+   "id": "a6bd9cf2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import File\n",
+    "# Import File, this is a palce holder for the database\n",
     "df = pd.read_csv(Path('./Resources/Name_of_File_Here.csv'))\n",
     "df.head()"
    ]
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "044c8a01",
+   "id": "faca6baf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60fa76a9",
+   "id": "eb5a775c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7099cc08",
+   "id": "8fd8d2b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a779b4d1",
+   "id": "5ae636bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a22c9535",
+   "id": "8fcd302b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d7f33a5",
+   "id": "bdec19a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "869973c4",
+   "id": "0919dd34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e87c6d1",
+   "id": "3706b211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61c502b9",
+   "id": "bb389504",
    "metadata": {},
    "outputs": [],
    "source": [
