--- a/SVM_w_interpolated_data.ipynb
+++ b/SVM_w_interpolated_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeVNqSTaWjc/70SZCbFC1F",
+      "authorship_tag": "ABX9TyObHn+mbrjdREOhDPEODQ25",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1335,9 +1335,385 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# split into predictor and features\n",
+        "\n",
+        "X = df.copy()\n",
+        "\n",
+        "X = X.drop(['index', 'FIPS', 'recent_trend'], axis=1)\n",
+        "\n",
+        "y = df['recent_trend']"
+      ],
+      "metadata": {
+        "id": "6947r8JRDAJn"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# scale data\n",
+        "\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "data_scaler = StandardScaler()\n",
+        "\n",
+        "X_scaled = data_scaler.fit_transform(X)\n",
+        "\n",
+        "X_scaled"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q2luKMda9wFB",
+        "outputId": "cf48e55d-8f93-448f-cacd-0de718f66620"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.00000000e+00, 0.00000000e+00, 1.71313988e-15, ...,\n",
+              "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+              "       [0.00000000e+00, 0.00000000e+00, 1.71313988e-15, ...,\n",
+              "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+              "       [0.00000000e+00, 0.00000000e+00, 1.71313988e-15, ...,\n",
+              "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+              "       ...,\n",
+              "       [0.00000000e+00, 0.00000000e+00, 1.71313988e-15, ...,\n",
+              "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+              "       [0.00000000e+00, 0.00000000e+00, 1.71313988e-15, ...,\n",
+              "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+              "       [0.00000000e+00, 0.00000000e+00, 1.71313988e-15, ...,\n",
+              "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "col_names = [name for name in X.columns]\n",
+        "\n",
+        "X = pd.DataFrame(data=X_scaled, columns = col_names)\n",
+        "\n",
+        "X.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 386
+        },
+        "id": "g-zDmA7ADlnj",
+        "outputId": "11bb6265-9eae-4a2d-def5-62512ecb9d9e"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   PM25_max_pred  PM25_med_pred  PM25_mean_pred   O3_max_pred   O3_med_pred  \\\n",
+              "0            0.0            0.0    1.713140e-15  4.879534e-15  5.186007e-15   \n",
+              "1            0.0            0.0    1.713140e-15  4.879534e-15  5.186007e-15   \n",
+              "2            0.0            0.0    1.713140e-15  4.879534e-15  5.186007e-15   \n",
+              "3            0.0            0.0    1.713140e-15  4.879534e-15  5.186007e-15   \n",
+              "4            0.0            0.0    1.713140e-15  4.879534e-15  5.186007e-15   \n",
+              "\n",
+              "   O3_mean_pred  PM25_max_pred_2001  PM25_max_pred_2002  PM25_max_pred_2003  \\\n",
+              "0           0.0        2.410929e-15        1.200231e-15                 0.0   \n",
+              "1           0.0        2.410929e-15        1.200231e-15                 0.0   \n",
+              "2           0.0        2.410929e-15        1.200231e-15                 0.0   \n",
+              "3           0.0        2.410929e-15        1.200231e-15                 0.0   \n",
+              "4           0.0        2.410929e-15        1.200231e-15                 0.0   \n",
+              "\n",
+              "   PM25_max_pred_2004  ...  O3_med_pred_2005  O3_med_pred_2006  \\\n",
+              "0        1.379576e-15  ...      4.859704e-15               0.0   \n",
+              "1        1.379576e-15  ...      4.859704e-15               0.0   \n",
+              "2        1.379576e-15  ...      4.859704e-15               0.0   \n",
+              "3        1.379576e-15  ...      4.859704e-15               0.0   \n",
+              "4        1.379576e-15  ...      4.859704e-15               0.0   \n",
+              "\n",
+              "   O3_med_pred_2007  O3_med_pred_2008  O3_med_pred_2009  O3_med_pred_2010  \\\n",
+              "0     -3.610443e-15               0.0               0.0               0.0   \n",
+              "1     -3.610443e-15               0.0               0.0               0.0   \n",
+              "2     -3.610443e-15               0.0               0.0               0.0   \n",
+              "3     -3.610443e-15               0.0               0.0               0.0   \n",
+              "4     -3.610443e-15               0.0               0.0               0.0   \n",
+              "\n",
+              "   O3_med_pred_2011  O3_med_pred_2012  O3_med_pred_2013  O3_med_pred_2014  \n",
+              "0               0.0               0.0               0.0               0.0  \n",
+              "1               0.0               0.0               0.0               0.0  \n",
+              "2               0.0               0.0               0.0               0.0  \n",
+              "3               0.0               0.0               0.0               0.0  \n",
+              "4               0.0               0.0               0.0               0.0  \n",
+              "\n",
+              "[5 rows x 90 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-f71393b7-75af-4f46-8fbc-eaf0023d0ab6\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PM25_max_pred</th>\n",
+              "      <th>PM25_med_pred</th>\n",
+              "      <th>PM25_mean_pred</th>\n",
+              "      <th>O3_max_pred</th>\n",
+              "      <th>O3_med_pred</th>\n",
+              "      <th>O3_mean_pred</th>\n",
+              "      <th>PM25_max_pred_2001</th>\n",
+              "      <th>PM25_max_pred_2002</th>\n",
+              "      <th>PM25_max_pred_2003</th>\n",
+              "      <th>PM25_max_pred_2004</th>\n",
+              "      <th>...</th>\n",
+              "      <th>O3_med_pred_2005</th>\n",
+              "      <th>O3_med_pred_2006</th>\n",
+              "      <th>O3_med_pred_2007</th>\n",
+              "      <th>O3_med_pred_2008</th>\n",
+              "      <th>O3_med_pred_2009</th>\n",
+              "      <th>O3_med_pred_2010</th>\n",
+              "      <th>O3_med_pred_2011</th>\n",
+              "      <th>O3_med_pred_2012</th>\n",
+              "      <th>O3_med_pred_2013</th>\n",
+              "      <th>O3_med_pred_2014</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.713140e-15</td>\n",
+              "      <td>4.879534e-15</td>\n",
+              "      <td>5.186007e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2.410929e-15</td>\n",
+              "      <td>1.200231e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.379576e-15</td>\n",
+              "      <td>...</td>\n",
+              "      <td>4.859704e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>-3.610443e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.713140e-15</td>\n",
+              "      <td>4.879534e-15</td>\n",
+              "      <td>5.186007e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2.410929e-15</td>\n",
+              "      <td>1.200231e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.379576e-15</td>\n",
+              "      <td>...</td>\n",
+              "      <td>4.859704e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>-3.610443e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.713140e-15</td>\n",
+              "      <td>4.879534e-15</td>\n",
+              "      <td>5.186007e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2.410929e-15</td>\n",
+              "      <td>1.200231e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.379576e-15</td>\n",
+              "      <td>...</td>\n",
+              "      <td>4.859704e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>-3.610443e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.713140e-15</td>\n",
+              "      <td>4.879534e-15</td>\n",
+              "      <td>5.186007e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2.410929e-15</td>\n",
+              "      <td>1.200231e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.379576e-15</td>\n",
+              "      <td>...</td>\n",
+              "      <td>4.859704e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>-3.610443e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.713140e-15</td>\n",
+              "      <td>4.879534e-15</td>\n",
+              "      <td>5.186007e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2.410929e-15</td>\n",
+              "      <td>1.200231e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.379576e-15</td>\n",
+              "      <td>...</td>\n",
+              "      <td>4.859704e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>-3.610443e-15</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 90 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f71393b7-75af-4f46-8fbc-eaf0023d0ab6')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-f71393b7-75af-4f46-8fbc-eaf0023d0ab6 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-f71393b7-75af-4f46-8fbc-eaf0023d0ab6');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "q2luKMda9wFB"
+        "id": "rxoPd9eUEY42"
       },
       "execution_count": null,
       "outputs": []
