--- a/Machine Learning Model/svm_template.ipynb
+++ b/Machine Learning Model/svm_template.ipynb
@@ -424,9 +424,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "mlenv",
+   "display_name": "FinalProject_mlenv",
    "language": "python",
-   "name": "mlenv"
+   "name": "finalproject_mlenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -438,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.13"
   },
   "mimetype": "text/x-python",
   "name": "python",
