--- a/Machine Learning Model/Reference Material/SVM_w_interpolated_data-Referencing.ipynb
+++ b/Machine Learning Model/Reference Material/SVM_w_interpolated_data-Referencing.ipynb
@@ -12,7 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -21,18 +28,6 @@
     "outputId": "5da2ee21-c4c4-4e87-85e2-1de1f2e50a1c"
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'apt-get' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n",
-      "The system cannot find the path specified.\n",
-      "'wget' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n",
-      "tar: Error opening archive: Failed to open '$SPARK_VERSION-bin-hadoop2.7.tgz'\n"
-     ]
-    },
     {
      "ename": "Exception",
      "evalue": "Unable to find py4j in /content/spark-3.1.3-bin-hadoop2.7\\python, your SPARK_HOME may not be configured correctly",
@@ -44,7 +39,7 @@
       "\u001b[1;31mIndexError\u001b[0m: list index out of range",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_31892\\272483384.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m# Start a SparkSession\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfindspark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mfindspark\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_39444\\2152481015.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# Start a SparkSession\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfindspark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mfindspark\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\anaconda3\\envs\\FinalProject_mlenv\\lib\\site-packages\\findspark.py\u001b[0m in \u001b[0;36minit\u001b[1;34m(spark_home, python_path, edit_rc, edit_profile)\u001b[0m\n\u001b[0;32m    161\u001b[0m             raise Exception(\n\u001b[0;32m    162\u001b[0m                 \"Unable to find py4j in {}, your SPARK_HOME may not be configured correctly\".format(\n\u001b[1;32m--> 163\u001b[1;33m                     \u001b[0mspark_python\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    164\u001b[0m                 )\n\u001b[0;32m    165\u001b[0m             )\n",
       "\u001b[1;31mException\u001b[0m: Unable to find py4j in /content/spark-3.1.3-bin-hadoop2.7\\python, your SPARK_HOME may not be configured correctly"
      ]
@@ -56,19 +51,6 @@
     "# For example:\n",
     "# spark_version = 'spark-3.0.3'\n",
     "spark_version = 'spark-3.1.3'\n",
-    "os.environ['SPARK_VERSION']=spark_version\n",
-    "\n",
-    "# Install Spark and Java\n",
-    "!apt-get update\n",
-    "!apt-get install openjdk-11-jdk-headless -qq > /dev/null\n",
-    "!wget -q http://www.apache.org/dist/spark/$SPARK_VERSION/$SPARK_VERSION-bin-hadoop2.7.tgz\n",
-    "!tar xf $SPARK_VERSION-bin-hadoop2.7.tgz\n",
-    "!pip install -q findspark\n",
-    "\n",
-    "# Set Environment Variables\n",
-    "import os\n",
-    "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
-    "os.environ[\"SPARK_HOME\"] = f\"/content/{spark_version}-bin-hadoop2.7\"\n",
     "\n",
     "# Start a SparkSession\n",
     "import findspark\n",
