upload pred dataset to db

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnnGYsxqq1QLGTtYegjD7G",
+      "authorship_tag": "ABX9TyNQv+PcLD/7Py9dnv4wwTNo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3197,12 +3197,12 @@
         "oz_pred.head()"
       ],
       "metadata": {
-        "id": "AGYeGEjhWQkv",
-        "outputId": "99f285bc-8531-4408-f4e5-69f828b5900a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "AGYeGEjhWQkv",
+        "outputId": "99f285bc-8531-4408-f4e5-69f828b5900a"
       },
       "execution_count": 38,
       "outputs": [
@@ -3604,12 +3604,12 @@
         "oz_pred_agg.head()"
       ],
       "metadata": {
-        "id": "JL-xGErQWg78",
-        "outputId": "0972766d-2745-4ef3-9dd6-9f170ffc296d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "JL-xGErQWg78",
+        "outputId": "0972766d-2745-4ef3-9dd6-9f170ffc296d"
       },
       "execution_count": 39,
       "outputs": [
@@ -3974,12 +3974,12 @@
         "oz_pred_year_agg.head()"
       ],
       "metadata": {
-        "id": "d_2R8tXaWnU_",
-        "outputId": "94418fd8-ecd6-4f10-8e83-ab151fa0df19",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "d_2R8tXaWnU_",
+        "outputId": "94418fd8-ecd6-4f10-8e83-ab151fa0df19"
       },
       "execution_count": 40,
       "outputs": [
@@ -4499,12 +4499,12 @@
         "oz_pred_year_agg.head()"
       ],
       "metadata": {
-        "id": "4uvpLX6IWuNJ",
-        "outputId": "bc222027-4f54-41b2-8025-52a7d020f6a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        }
+        },
+        "id": "4uvpLX6IWuNJ",
+        "outputId": "bc222027-4f54-41b2-8025-52a7d020f6a8"
       },
       "execution_count": 41,
       "outputs": [
@@ -4856,11 +4856,11 @@
         "print(len(oz_pred_agg))"
       ],
       "metadata": {
-        "id": "w30iRlUTW54F",
-        "outputId": "25f96876-b8f2-446b-beba-e5d776441486",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w30iRlUTW54F",
+        "outputId": "25f96876-b8f2-446b-beba-e5d776441486"
       },
       "execution_count": 43,
       "outputs": [
@@ -5077,12 +5077,12 @@
         "pred_df.head()"
       ],
       "metadata": {
-        "id": "3gIHfDEOXSOH",
-        "outputId": "d1310bd2-fc9f-4cdc-b947-3433fbc77677",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "3gIHfDEOXSOH",
+        "outputId": "d1310bd2-fc9f-4cdc-b947-3433fbc77677"
       },
       "execution_count": 50,
       "outputs": [
@@ -5293,11 +5293,11 @@
         "len(pred_df)"
       ],
       "metadata": {
-        "id": "G9NmCP6WXlsl",
-        "outputId": "525557d6-e057-4c5b-da81-80d2c08334b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G9NmCP6WXlsl",
+        "outputId": "525557d6-e057-4c5b-da81-80d2c08334b6"
       },
       "execution_count": 45,
       "outputs": [
@@ -5546,12 +5546,12 @@
         "pred_df.head()"
       ],
       "metadata": {
-        "id": "fETEECEQXppK",
-        "outputId": "25d9a6bf-6052-4fe2-a47e-dab0b1f2e3ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "fETEECEQXppK",
+        "outputId": "25d9a6bf-6052-4fe2-a47e-dab0b1f2e3ca"
       },
       "execution_count": 51,
       "outputs": [
@@ -5793,11 +5793,11 @@
         "len(pred_df)"
       ],
       "metadata": {
-        "id": "0WToSWXnX0hN",
-        "outputId": "2641cbc7-66f0-4c6f-cd9c-e9a4f6cc0a96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0WToSWXnX0hN",
+        "outputId": "2641cbc7-66f0-4c6f-cd9c-e9a4f6cc0a96"
       },
       "execution_count": 48,
       "outputs": [
@@ -6171,12 +6171,12 @@
         "pred_df.head()"
       ],
       "metadata": {
-        "id": "c_45-zDiX9M8",
-        "outputId": "373458bd-782b-4f51-e84a-126ea8fd966e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        }
+        },
+        "id": "c_45-zDiX9M8",
+        "outputId": "373458bd-782b-4f51-e84a-126ea8fd966e"
       },
       "execution_count": 52,
       "outputs": [
@@ -6544,11 +6544,11 @@
         "pred_df.columns"
       ],
       "metadata": {
-        "id": "Tf1MNMDPYUsY",
-        "outputId": "6e2a8729-f2d4-4b43-f892-5af772516192",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Tf1MNMDPYUsY",
+        "outputId": "6e2a8729-f2d4-4b43-f892-5af772516192"
       },
       "execution_count": 55,
       "outputs": [
@@ -6628,11 +6628,11 @@
         "len(pred_df)"
       ],
       "metadata": {
-        "id": "4gqKjq2HYrRF",
-        "outputId": "77ff9cdb-61e3-420c-e7ab-e9d9b114aed7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4gqKjq2HYrRF",
+        "outputId": "77ff9cdb-61e3-420c-e7ab-e9d9b114aed7"
       },
       "execution_count": 56,
       "outputs": [
@@ -6963,12 +6963,12 @@
         "pred_df.head()"
       ],
       "metadata": {
-        "id": "4ex3re-YYuT3",
-        "outputId": "d14c05f4-9071-457a-97f2-250bd3f4efdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        }
+        },
+        "id": "4ex3re-YYuT3",
+        "outputId": "d14c05f4-9071-457a-97f2-250bd3f4efdd"
       },
       "execution_count": 57,
       "outputs": [
@@ -8441,7 +8441,7 @@
       "metadata": {
         "id": "-2fWPZO9Qyb7"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -8454,7 +8454,7 @@
       "metadata": {
         "id": "cnkCiaMlO-KE"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -8483,9 +8483,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "pred_df.to_sql('prediction_model_dataset', engine, if_exists='replace')"
+      ],
       "metadata": {
         "id": "vPtv796aR6yY"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ur6JyLesZSqM"
       },
       "execution_count": null,
       "outputs": []
